--- a/light/android.hardware.light@2.0-service.fxtec_msm8998.rc
+++ b/light/android.hardware.light@2.0-service.fxtec_msm8998.rc
@@ -54,6 +54,7 @@ on init
     chmod 660 /sys/class/leds/keyboard-backlight/brightness
 
 service light-hal-2-0 /vendor/bin/hw/android.hardware.light@2.0-service.fxtec_msm8998
+    interface android.hardware.light@2.0::ILight default
     class hal
     user system
     group system
