--- a/devicesettings/AndroidManifest.xml
+++ b/devicesettings/AndroidManifest.xml
@@ -26,7 +26,7 @@
         android:targetSdkVersion="27" />
 
     <application
-        android:icon="@mipmap/ic_launcher_settings"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/device_settings_app_name"
         android:theme="@style/Theme.Main"
         android:defaultToDeviceProtectedStorage="true"
