--- a/light/android.hardware.light@2.0-service.fxtec_msm8998.rc
+++ b/light/android.hardware.light@2.0-service.fxtec_msm8998.rc
@@ -61,3 +61,5 @@ service light-hal-2-0 /vendor/bin/hw/android.hardware.light@2.0-service.fxtec_ms
     class hal
     user system
     group system input
+    # shutting off lights while powering-off
+    shutdown critical
