--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -498,8 +498,8 @@ on charger
 
 service vendor.ims_rtp_daemon /vendor/bin/ims_rtp_daemon
     class main
-    user system
-    group radio diag inet log
+    user radio
+    group radio vendor_qti_diag inet log
     writepid /dev/cpuset/system-background/tasks
 
 on property:vendor.ims.DATA_DAEMON_STATUS=1
