--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -495,6 +495,7 @@ service vendor.hvdcp_opti /vendor/bin/hvdcp_opti
 
 on charger
     start vendor.hvdcp_opti
+    start vendor.power_off_alarm
     setprop sys.usb.configfs 1
 
 service vendor.ims_rtp_daemon /vendor/bin/ims_rtp_daemon
