--- a/usb/android.hardware.usb@1.1-service.pro1.rc
+++ b/usb/android.hardware.usb@1.1-service.pro1.rc
@@ -1,4 +1,6 @@
 service vendor.usb-hal-1-1 /vendor/bin/hw/android.hardware.usb@1.1-service.pro1
+    interface android.hardware.usb@1.1::IUsb default
+    interface android.hardware.usb@1.0::IUsb default
     class hal
     user root
     group root system shell mtp
