--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -374,6 +374,9 @@ on boot
 
     write /proc/sys/net/ipv6/conf/default/accept_ra_defrtr 1
 
+    start vendor.qcrild
+    start vendor.qcrild2
+
 on charger
     load_system_props
 
@@ -636,12 +639,6 @@ service vendor.qseecomd /vendor/bin/qseecomd
     user root
     group root
     writepid /dev/cpuset/system-background/tasks
-
-service vendor.ril-daemon2 /vendor/bin/hw/rild -c 2
-    class main
-    user radio
-    group radio cache inet misc audio sdcard_r sdcard_rw diag oem_2901 log
-    capabilities BLOCK_SUSPEND NET_ADMIN NET_RAW
 
 service vendor.rmt_storage /vendor/bin/rmt_storage
     class core
