pro1: lights: Enable support for keyboard brightness control
The keyboard backlight driver may not support variable brightness control,
but we can at least allow toggling the lights.

This support has been added to the frameworks and with it all the logic
related to keyboard lights enabling/disabling when lid opens/closes,
so also remove all that handling from the lights HAL.

Change-Id: Idc0a1cd5da85dfaef11a1ec9d217775e0618d839

--- a/light/android.hardware.light@2.0-service.fxtec_msm8998.rc
+++ b/light/android.hardware.light@2.0-service.fxtec_msm8998.rc
@@ -60,6 +60,6 @@ on init
 service light-hal-2-0 /vendor/bin/hw/android.hardware.light@2.0-service.fxtec_msm8998
     class hal
     user system
-    group system input
+    group system
     # shutting off lights while powering-off
     shutdown critical
