pro1: Return to AOSP rild services
Even though basic telephony features were fully functional with QC rild
services, IMS was sadly broken. Turns out that an upgraded radio
baseband is required for a full switch. As of now, the shipped baseband
version is MPSS.AT.2.0.c4-01010-8998_GEN_PACK-1 and according to QCOM,
the older modem packages must launch ril-daemon (actually, anything lower
than version MPSS.AT.3.1.xxx).

While bringing back ril-daemon2 service, update it to match ril-daemon
service definitions from AOSP.

This partially reverts commit 5e31709 and fully reverts commit 27a9e4f.

Change-Id: Ie86f3d37d9185a3d1e465f044699883847fb0b88

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -372,9 +372,6 @@ on boot
 
     write /proc/sys/net/ipv6/conf/default/accept_ra_defrtr 1
 
-    start vendor.qcrild
-    start vendor.qcrild2
-
 on charger
     load_system_props
 
@@ -612,6 +609,12 @@ service vendor.qseecomd /vendor/bin/qseecomd
     user root
     group root
     writepid /dev/cpuset/system-background/tasks
+
+service vendor.ril-daemon2 /vendor/bin/hw/rild -c 2
+    class main
+    user radio
+    group radio cache inet misc audio log readproc wakelock oem_2901
+    capabilities BLOCK_SUSPEND NET_ADMIN NET_RAW
 
 service vendor.rmt_storage /vendor/bin/rmt_storage
     class core
