--- a/devicesettings/AndroidManifest.xml
+++ b/devicesettings/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-     Copyright (C) 2018-2019 The LineageOS Project
+     Copyright (C) 2018-2020 The LineageOS Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -62,7 +62,10 @@
             </intent-filter>
             <meta-data
                 android:name="com.android.settings.category"
-                android:value="com.android.settings.category.ia.system" />
+                android:value="com.android.settings.category.ia.language" />
+            <meta-data
+                android:name="com.android.settings.order"
+                android:value="1" />
             <meta-data
                 android:name="com.android.settings.summary"
                 android:resource="@string/keyboard_settings_summary" />
