--- a/devicesettings/AndroidManifest.xml
+++ b/devicesettings/AndroidManifest.xml
@@ -63,6 +63,15 @@
         </activity>
 
         <activity
+            android:name=".SetupWizardActivity"
+            android:theme="@style/Theme.SetupWizard">
+            <intent-filter>
+                <action android:name="org.lineageos.settings.device.SUW_SETTINGS" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <activity
             android:name=".TouchscreenSettingsActivity"
             android:label="@string/touchscreen_settings_title"
             android:icon="@drawable/ic_settings_additional_buttons"
