pro1: devicesettings: Introduce PhysicalLayoutDialog
* With change I1c46d3568c4d5bfc78e1cbae033071c7641fdf29 it is now
  possible to inject the keyboard layout selection to where they fit
  best: Before the built-in keyboard settings
* This dialog shows the same selection as the previous ListPreference
* Move the code getting the current and setting a new value to the
  newly added class as well
* Remove the unneded constant

Change-Id: I6f7e4ed85aff7fefe074cbcfbad140a83a01053d

--- a/devicesettings/AndroidManifest.xml
+++ b/devicesettings/AndroidManifest.xml
@@ -63,6 +63,15 @@
         </activity>
 
         <activity
+            android:name=".PhysicalLayoutDialog"
+            android:theme="@style/Theme.Main.Dialog">
+            <intent-filter>
+                <action android:name="org.lineageos.settings.device.PHYSICAL_LAYOUT_SETTINGS" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <activity
             android:name=".TouchscreenSettingsActivity"
             android:label="@string/touchscreen_settings_title"
             android:icon="@drawable/ic_settings_additional_buttons"
