[pro1] Tweak gps.conf to significantly speed up getting a GPS fix
This change enables Qualcomm XTRA and A-GPS for F(x)tec Pro1.

Change-Id: I99262c30de866c699b36329d937ca2da7bc9b788

--- a/configs/gps/gps.conf
+++ b/configs/gps/gps.conf
@@ -4,12 +4,16 @@
 #XTRA_SERVER_2=http://xtrapath2.izatcloud.net/xtra2.bin
 #XTRA_SERVER_3=http://xtrapath3.izatcloud.net/xtra2.bin
 
+XTRA_SERVER_1=http://xtrapath1.izatcloud.net/xtra3grcej.bin
+XTRA_SERVER_2=http://xtrapath2.izatcloud.net/xtra3grcej.bin
+XTRA_SERVER_3=http://xtrapath3.izatcloud.net/xtra3grcej.bin
+
 #Version check for XTRA
 #DISABLE = 0
 #AUTO    = 1
 #XTRA2   = 2
 #XTRA3   = 3
-XTRA_VERSION_CHECK=0
+XTRA_VERSION_CHECK=1
 
 # Error Estimate
 # _SET = 1
@@ -37,8 +41,8 @@ INTERMEDIATE_POS=0
 # default - non is locked for backward compatibility
 #GPS_LOCK = 0
 
-# supl version 1.0
-SUPL_VER=0x10000
+# supl version 2.0
+SUPL_VER=0x20000
 
 # Emergency SUPL, 1=enable, 0=disable
 #SUPL_ES=0
@@ -73,8 +77,8 @@ CAPABILITIES=0x37
 ################################
 
 # FOR SUPL SUPPORT, set the following
-# SUPL_HOST=supl.host.com or IP
-# SUPL_PORT=1234
+SUPL_HOST=supl.google.com
+SUPL_PORT=7275
 
 # FOR C2K PDE SUPPORT, set the following
 # C2K_HOST=c2k.pde.com or IP
